# amazon-kinesis-video-streams-webrtc-sdk-c

./: CMakeLists.txt
scripts/: build.sh  run-webrtc-kinesis.py
services/: CMakeLists.txt  webrtc-to-kinesis.c
